--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Kullanıcı oyunu oynayarak hedefi vurmaya çalışır. Oyuncunun hedefi vurmaya çalıştığı sürece puanı artar. Oyunun amacı en yüksek puanı elde etmektir.">
     <title>Hedef Avı | TeknoKapsül</title>
-    <link rel="shortcut icon" href="/Pictures/logo.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/logo.ico" type="image/x-icon">
     <style>
         * {
             margin: 0;
